--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "CLOUDAMQP_URL= node src/index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "amqplib": "^0.5.5",
