--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "amqplib": "^0.5.5",
     "bluebird": "^3.7.2",
-    "node-fetch": "^2.6.0"
+    "http-proxy-agent": "^3.0.0",
+    "https-proxy-agent": "^4.0.0",
+    "node-fetch": "^2.6.0",
+    "socks-proxy-agent": "^4.0.2"
   }
 }
